@@ -1,4 +1,4 @@
-# Generated by /home/texlive/karl/Master/bin/x86_64-linux/tlmgr on Thu Apr 16 01:56:35 2020
+# Generated by /home/texlive/karl/Master/bin/x86_64-linux/tlmgr on Sat Oct  3 02:49:47 2020
 # Originally written by Thomas Esser, 1998. Public domain.
 #
 # For guidance on how to support local formats, see the man
@@ -42,7 +42,6 @@
 #
 # from aleph:
 aleph aleph - *aleph.ini
-lamed aleph language.dat *lambda.ini
 #
 # from amstex:
 amstex pdftex - -translate-file=cp227.tcx *amstex.ini
